# codex-workspace

./: .env.example  LICENSE  README.md  pyproject.toml
.github/workflows/: read_only_provider_validation.yml
docs/: AGENT_UPLOAD_GUIDE.md  CLI_JSON_INPUTS.md  CODEX_HANDOFF_ADDENDUM_V6.md  CODEX_HANDOFF_MASTER_SPEC.md  CONFIDENCE_BREAKDOWN.md  CURRENT_STATUS.md  DAILY_POP.md  DATA_DISAGREEMENTS.md  DATA_PROVIDERS.md  DECISION_JOURNAL.md  HANDOFF_STATUS.md  MARKET_CONTEXT_RULES.md  PORTFOLIO_IMPACT.md  POSTMORTEM.md  PROVIDER_EVIDENCE.md  READ_ONLY_STOCK_CARD.md  REGIME_OVERRIDE.md  SECRETS_AND_RUNTIME.md  SIGNAL_QUALITY.md  SIGNAL_REVIEW_BOARD.md  WHY_NOW.md
src/stockgod/: __init__.py  __main__.py  cli.py
tests/: test_cli.py  test_cli_evidence.py  test_cli_phase3.py  test_cli_stock_card.py  test_confidence_breakdown.py  test_daily_pop.py  test_data_disagreements.py  test_decision_journal.py  test_edgar_form4_helpers.py  test_edgar_provider.py  test_evidence_snapshot.py  test_fmp_provider.py  test_fred_provider.py  test_live_provider_smoke.py  test_massive_provider.py  test_phase2_integration.py  test_portfolio_impact.py  test_postmortem.py  test_provider_cli.py  test_provider_config.py  test_provider_contracts.py  test_provider_errors.py  test_provider_normalization.py  test_provider_router.py  test_regime_override.py  test_signal_quality.py  test_signal_review_board.py  test_smoke.py  test_stock_card.py  test_why_now.py  test_yahoo_provider.py
tests/fixtures/: journal_entries.json  phase2_confidence_input.json  phase2_data_check_input.json  phase2_pop_input.json  (+4 more)
(+39 files in other folders)
